<resources>
    <string name="app_name">Go Healthy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appp_Name">GO HEALTHY</string>
    <string name="welcome_text">Welcome To</string>
    <string name="toast">Toast</string>
    <string name="add">Add</string>
    <string name="add_your_lunch">Add Your Lunch</string>
    <string name="add_your_meal">Add Your Meal</string>
    <string name="add_your_dinner">Add Your Dinner</string>
    <string name="add_your_workout">Add Your Workout</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="stats">Your Lifetime Stats</string>
    <string name="KcalIn">Kcal In</string>
    <string name="KcalOut">Kcal Out</string>
    <string name="Steps">Steps</string>
    <string name="KcalInCount">1234</string>
    <string name="KcalOutCount">1234</string>
    <string name="StepsCount">1234</string>
    <string name="breakfastHint">ex:2 Eggs</string>
    <string name="lunchHint">ex:chicken curry</string>
    <string name="dinnerHint">ex:Alfredo pasta</string>
    <string name="workoutHint">ex:30 min run</string>
    <string name="english">العربية</string>
    <string name="get_started">Get Started</string>
    <string name="arabic">English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_data">Your Data</string>
    <string name="save">save</string>
    <string name="edit_your_data">Edit Your Data</string>
    <string name="chat_hint">Ask me anything about health and fitness.</string>
    <string name="chatbot">Chatbot</string>
    <string name="type_a_message">Type a message</string>
    <string name="your_daily_report">Your Daily Report</string>
    <string name="back_to_home">Back To Home</string>
    <string name="language">"Language "</string>
    <string name="bio">ِReady to break a sweat?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="your_gender">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="_8000_step">8000 step</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="calories_burnt">CALORIES BURNT</string>
    <string name="water">Water</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="good_day">Good Day, </string>
    <string name="daily_stats">Daily Stats</string>
    <string name="activities">Activities</string>
    <string name="exercise">Exercise</string>
    <string name="suggestion_running">Suggestion : Running</string>
    <string name="duration_30_min_calories_50_kcal">Duration: 30 min Calories:50 KCAL</string>
    <string name="food">Food</string>
    <string name="suggestion_cezar_salad">Suggestion: Cezar Salad</string>
    <string name="preparation_30_min_calories_300_kcal">Preparation: 30 min Calories: 300 KCAL</string>
    <string name="eat">Eat</string>
    <string name="have_a_meal">Have a Meal</string>
    <string name="no_history_available">No History Available</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="metrics">Metrics</string>
    <string name="fit">Fit</string>
    <string name="loading">loading...</string>
    <string name="log_out">Logout</string>
    <string name="change_language">العربية</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_your_breakfast">Add Your Meal</string>
    <string name="kcal">Kcal</string>

</resources>