<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SignUpFragment">


    <ImageView
        android:id="@+id/signup_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/signup_bg"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_bg"


        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:minHeight="48dp"
            app:startIconDrawable="@drawable/email_24"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusTopStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:minHeight="48dp"
            app:startIconDrawable="@drawable/baseline_lock_24"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusTopStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"

            app:endIconMode="custom"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/singUpButton"
            android:minHeight="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="20dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView

            android:id="@+id/textdont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintStart_toStartOf="parent" />


        <TextView

            android:id="@+id/registerNowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:layout_marginStart="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/register_now"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textdont"

            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>