<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- Toolbar with back button -->
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="16dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginTop="30dp"
            android:contentDescription="Back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/chatbot"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            tools:ignore="HardcodedText" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="bottom"
        android:background="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type_a_message"
            android:textSize="20sp"
            android:layout_marginTop="20dp"

        android:background="@drawable/rounded_corners_background"
        android:padding="12dp" />

        <ImageButton


           android:layout_marginBottom="18dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_send_24"
            android:background="@drawable/button_background"
            android:padding="3dp"
            android:contentDescription="@string/send" />
    </LinearLayout>

</LinearLayout>