<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@color/custom_orange"
    app:strokeWidth="2dp"
    app:cardCornerRadius="30dp"
    android:elevation="5dp"
    android:layout_marginHorizontal="10dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/add_your_breakfast"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/orangeText"
            android:padding="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"

            app:boxStrokeColor="@color/orangeText"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundMode="outline"
            tools:hint="@string/breakfastHint"
            android:padding="20dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputField"
            android:layout_marginBottom="10dp"

            android:layout_marginHorizontal="100dp"
            android:backgroundTint="@color/custom_orange"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




</com.google.android.material.card.MaterialCardView>