<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="400dp"
        android:layout_height="300dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/custom_orange"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="380dp"
            android:layout_height="280dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp">
            <TextView
                android:id="@+id/newTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_dinner"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/orangeText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <ImageView
                android:id="@+id/closeImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icons8_close"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/toast">
                    <com.google.android.material.textfield.TextInputEditText
                        app:boxStrokeColor="@color/custom_orange"
                        android:inputType="text"
                        android:id="@+id/titleT"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/custom_orange"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/linearlayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>