<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DailyReportFragment"
    android:background="@color/custom_orange">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:layout_marginTop="30dp"
        android:text="@string/your_daily_report"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
   <ImageView
       android:id="@+id/dailyReportImage"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/title"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="20dp"
       android:src="@drawable/arm"
       android:elevation="4dp"
       />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/kcalInCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dailyReportImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:cardBackgroundColor="@color/light_blue"
        android:elevation="4dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fast_food"
                android:layout_gravity="center"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/KcalIn"
                android:textColor="@color/white"
                android:paddingHorizontal="13dp"
                />
            <TextView
                android:id="@+id/kcalInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:padding="5dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/kcalOutCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/kcalInCard"
        app:layout_constraintStart_toEndOf="@id/kcalInCard"
        app:layout_constraintBottom_toBottomOf="@id/kcalInCard"
        app:layout_constraintEnd_toStartOf="@id/stepsCard"
        app:cardBackgroundColor="@color/light_blue"
        android:elevation="4dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/trending_topic"
                android:layout_gravity="center"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:text="@string/KcalOut"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/kcalOutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:padding="5dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/stepsCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/kcalInCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/light_blue"
        android:elevation="4dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        android:layout_marginRight="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/footsteps"
                android:layout_gravity="center"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/Steps"
                android:textColor="@color/white"
              android:paddingHorizontal="20dp"
                />
            <TextView
                android:id="@+id/stepsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:padding="5dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/kcalInCard"
        app:layout_constraintEnd_toStartOf="@id/stepsCard"
        android:text="@string/back_to_home"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:backgroundTint="@color/light_blue"
        android:layout_marginBottom="40dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>